--- a/Vineyard/humboldt.yaml
+++ b/Vineyard/humboldt.yaml
@@ -61,8 +61,14 @@ install_phases:
   # ArrayCableInstallation: !!python/tuple
   # - MonopileInstallation
   # - 1.0
-  ArrayCableInstallation: 0
-  ExportCableInstallation: 0   # Indexed by OSS Install
-  MooredSubInstallation: 0
+  ArrayCableInstallation: !!python/tuple
+  - MooredSubInstallation
+  - 0.5 # Start array cable installation when 50% of floaters are installed
+  ExportCableInstallation: 0
+  MooredSubInstallation: !!python/tuple
+  - MooringSystemInstallation
+  - 0.5 # Start substructure install when 50% of mooring lines installed
   MooringSystemInstallation: 0
-  FloatingSubstationInstallation: 0
+  FloatingSubstationInstallation: !!python/tuple
+  - ExportCableInstallation
+  - 0.25 # Start OSS installation when 25% of cable installation is complete
