--- a/West_coast_sites/south_or.yaml
+++ b/West_coast_sites/south_or.yaml
@@ -1,8 +1,8 @@
 site:
-  mean_windspeed: 10.81
-  distance: 43.349 # distance to Humboldt
-  depth: 832
-  distance_to_landfall: 43.349 # distance to Humboldt
+  mean_windspeed: 9.84 # (this is at 100m, need windspeed at 150m)
+  distance: 148.402 # distance to Coos Bay
+  depth: 601.7
+  distance_to_landfall: 214 # placeholder straight line to Wendson Canyon
 plant:
   layout: grid
   row_spacing: 7
