--- a/west_coast_sites/south_or.yaml
+++ b/west_coast_sites/south_or.yaml
@@ -2,7 +2,7 @@ site:
   mean_windspeed: 9.84 # (this is at 100m, need windspeed at 150m)
   distance: 148.402 # distance to Coos Bay
   depth: 601.7
-  distance_to_landfall: 214 # placeholder straight line to Wendson Canyon
+  distance_to_landfall: 215.030 # to Wendson Canyon
 plant:
   layout: grid
   row_spacing: 7
