add option for assembly lines

--- a/west_coast_sites/base_setup.yaml
+++ b/west_coast_sites/base_setup.yaml
@@ -9,6 +9,9 @@ plant:
   substation_distance: 1
   turbine_spacing: 7
   capacity: 1000
+  # port
+port:
+  sub_assembly_lines: 1
 # Different ways to choose turbines; 12MW_generic is in the base ORBIT model, 15MW is in the specific analysis repo (data/turbines)
 turbine: "15MW_generic"
 landfall:
