add mooring_system_design specifications

--- a/west_coast_sites/base_setup.yaml
+++ b/west_coast_sites/base_setup.yaml
@@ -58,7 +58,8 @@ substation_design:
   floating_oss: True
 mooring_system_design:
   num_lines: 3
-  drag_embedment_fixed_length: 0
+  anchor_type: "Drag Embedment"
+  drag_embedment_fixed_length: 0.5
 
 # Configured Phases
 design_phases:
