--- a/west_coast_sites/base_setup.yaml
+++ b/west_coast_sites/base_setup.yaml
@@ -14,7 +14,7 @@ port:
   sub_assembly_lines: 1
   turbine_assembly_cranes: 1
 # Different ways to choose turbines; 12MW_generic is in the base ORBIT model, 15MW is in the specific analysis repo (data/turbines)
-turbine: "15MW_generic"
+turbine: "15MW_four_sections"
 landfall:
   interconnection_distance: 3
   trench_length: 2
