--- a/west_coast_sites/north_ca.yaml
+++ b/west_coast_sites/north_ca.yaml
@@ -1,37 +1,31 @@
 site:
-  mean_windspeed: 0.0
-  distance: 0.0
-  depth: 0.0
-  distance_to_landfall: 0.0
+  mean_windspeed: 10.81
+  distance: 43.349 # distance to Humboldt
+  depth: 832
+  distance_to_landfall: 43.349 # distance to Humboldt
 plant:
   layout: grid
   row_spacing: 7
   substation_distance: 1
   turbine_spacing: 7
   capacity: 1000
-# port
-port:
-  sub_assembly_lines: 1
-  turbine_assembly_cranes: 1
 # Different ways to choose turbines; 12MW_generic is in the base ORBIT model, 15MW is in the specific analysis repo (data/turbines)
-turbine: "15MW_four_sections"
+turbine: "15MW_generic"
 landfall:
   interconnection_distance: 3
   trench_length: 2
-# export_system:
-  # onshore_construction_cost: 0
 # Vessels
-array_cable_install_vessel: array_cable_lay_vessel
-export_cable_install_vessel: export_cable_lay_vessel
+array_cable_install_vessel: example_cable_lay_vessel
+export_cable_install_vessel: example_cable_lay_vessel
 # export_cable_bury_vessel: example_cable_lay_vessel
 # Assume the dynamic cables will be suspended in the water column (not buried)
 oss_install_vessel: example_support_vessel # assume that this is towed out with a anchor handling vessel
 # spi_vessel: example_large_scour_protection_vessel  # Define a custom vessel in analysis repo (data/vessels) since standard SPI vessel isn't big enough for 15 MW turbine scour
 # Scour protection installation (SPI) vessel only for fixed bottom foundations to prevent erosion at seabed
-ahts_vessel: example_ahts_vessel
+support_vessel: example_support_vessel
 towing_vessel: example_towing_vessel
 towing_vessel_groups: # This is the key group for towing out the substructure/turbine assembly
-  ahts_vessels: 1
+  # station_keeping_vessels: 1
   towing_vessels: 2
   num_groups: 3
 mooring_install_vessel: example_support_vessel
@@ -47,19 +41,19 @@ mooring_install_vessel: example_support_vessel
 substructure:
   takt_time: 168
   towing_speed: 7
-  unit_cost: 11757583 # USD, IEA VolutrnUS Reference Hull. Output from a run by Garret , Wisdem. 19 Aug 2022. 
+  unit_cost: 11757583 # USD, IEA VolutrnUS Reference Hull. Output from a run by Garret , Wisdem. 19 Aug 2022.
 array_system_design:
   cables:
-  - XLPE_500mm_132kV_dynamic
-  floating_cable_depth: 300
+  - XLPE_185mm_66kV
+  - XLPE_630mm_66kV
 export_system_design:
-  cables: HVDC_2000mm_320kV_dynamic
+  cables: HVDC_2000mm_320kV
   percent_added_length: 0.0
 substation_design:
   floating_oss: True
 mooring_system_design:
   num_lines: 3
-  anchor_type: "Drag Embedment"
+  drag_embedment_fixed_length: 0
 
 # Configured Phases
 design_phases:
@@ -68,9 +62,13 @@ design_phases:
 - SemiSubmersibleDesign
 - SemiTautMooringSystemDesign
 install_phases:
+     # Define some dependent start times, ie, Array Cables start when Monopile are 100% complete
+  ArrayCableInstallation: !!python/tuple
+  - MonopileInstallation
+  - 1.0
   ArrayCableInstallation: !!python/tuple
   - MooredSubInstallation
-  - 0.8 # Start array cable installation when 50% of floaters are installed
+  - 0.5 # Start array cable installation when 50% of floaters are installed
   ExportCableInstallation: 0
   MooredSubInstallation: !!python/tuple
   - MooringSystemInstallation
