Created horrible hack for separate array and export cable lay rates.

--- a/west_coast_sites/base_setup.yaml
+++ b/west_coast_sites/base_setup.yaml
@@ -23,7 +23,7 @@ landfall:
 # Vessels
 array_cable_install_vessel: array_cable_lay_vessel
 export_cable_install_vessel: export_cable_lay_vessel
-# export_cable_bury_vessel: example_cable_lay_vessel
+array_cable_bury_vessel: dummy_cable_bury_vessel     # TODO - Fix this awful hack to define separate lay rates for export and array
 # Assume the dynamic cables will be suspended in the water column (not buried)
 oss_install_vessel: example_support_vessel # assume that this is towed out with a anchor handling vessel
 # spi_vessel: example_large_scour_protection_vessel  # Define a custom vessel in analysis repo (data/vessels) since standard SPI vessel isn't big enough for 15 MW turbine scour
@@ -60,6 +60,8 @@ substation_design:
 mooring_system_design:
   num_lines: 3
   anchor_type: "Drag Embedment"
+# ArrayCableInstallation:      # TODO: Define faster array cable lay/'bury' speed because its not not actually     
+  # cable_lay_bury_speed: 0.4 
 
 # Configured Phases
 design_phases:
